# open-managed-agents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  alembic.ini  entrypoint.sh  plan.md  pyproject.toml  run.sh  sample_analysis.md  service.staging.yaml
alembic/: env.py
app/: agent_contract.py  auth.py  config.py  content_scan.py  errors.py  event_validation.py  factory.py  ids.py  logging.py  main.py  metadata.py  pagination.py  secret_cipher.py  session_resources.py  session_state.py  storage.py  storage_migration.py  webhooks.py  worker.py  workspace.py
compat/: cma-api-inventory.yaml  cma-event-catalog.yaml  cma-state-machines.yaml  upstream-manifest.yaml
docs/: agent-versioning.md  anthropic-sdk-contract-tests.md  claude-managed-agents-alignment.md  compatibility-matrix.md  deployment-platforms.md  deployments.md  managed-agents-api-coverage.md  memory-stores.md  open-core-architecture.md  openai-compatible-providers.md  sandbox-runtime.md  webhooks.md  work-queue.md
open_managed_agents/: __init__.py
scripts/: entrypoint.sh  migrate.sh  start-web.sh  start-worker.sh
tests/: conftest.py  test_control_plane.py  test_db_api_key_auth.py  test_deployments.py  test_import_surface.py  test_logging.py  test_memory_stores.py  test_object_storage.py  test_openai_stream_mapping.py  test_pagination_edges.py  test_resource_apis.py  test_runtime_http_integration.py  test_runtime_providers.py  test_runtime_sandbox.py  test_secret_cipher.py  test_session_semantics.py  test_skills_validation.py  test_storage_migration.py  (+4 more)
(+52 files in other folders)
