[project]
name = "open-managed-agents"
version = "0.1.0"
description = "Claude Managed Agents-shaped control plane backed by the OpenAI Agents SDK."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.8",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "sentry-sdk[fastapi]>=2.0",
    "aioboto3>=13.0",
    "openai-agents>=0.3.0",
]

[project.scripts]
oma-worker = "app.worker:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "open_managed_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
